--- a/restaurant.css
+++ b/restaurant.css
@@ -1,1 +1,16 @@
-
+html{background-color: red}
+body{font-family: 'Chewy';}
+h1{background-color: white;width:300px;border: 30px;margin: 25px;padding: 25px }
+a:link, a:visited {
+  background-color: red;
+  color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+a:hover, a:active {
+  background-color: pink;
+}
+body[text-align: center;}
+img{border: 30px;padding: 25px;background-color: white}
