--- a/restaurant.css
+++ b/restaurant.css
@@ -14,3 +14,16 @@ a:hover, a:active {
 }
 body[text-align: center;}
 img{border: 30px;padding: 25px;background-color: white}
+
+div. image {
+  float: right;
+  width: 30%;
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+  border: thin black solid;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+
