--- a/restaurant.css
+++ b/restaurant.css
@@ -10,20 +10,8 @@ a:link, a:visited {
   display: inline-block;
 }
 a:hover, a:active {
-  background-color: pink;
+  background-color: black;
 }
 body[text-align: center;}
 img{border: 30px;padding: 25px;background-color: white}
-
-div. image {
-  float: right;
-  width: 30%;
-  text-align: center;
-  font-style: italic;
-  font-size: smaller;
-  text-indent: 0;
-  border: thin black solid;
-  margin: 0.5em;
-  padding: 0.5em;
-}
 
