--- a/restaurant.css
+++ b/restaurant.css
@@ -1,190 +1,64 @@
-h1 {
-  font-family: 'chewy';
-  font-size: 35px;
-  padding-left: 20px;
-  padding-right:20px;
-  color: black;
-  text-align: center;
+body {
+  font-family: 'Chewy';
   background-color:white;
-
-}
-
-p {
-  font-family:'Passion One', cursive; 
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 35px;
-  color: black;
-  text-align: left;
-}
-.img-circle {
-border-radius: 50%;
-border: 3px solid black;
-height: 100px;
-width: 100px;
-margin-bottom: 10px;
-margin-left: 10px;
-}
-img {
-  border: 15px solid black;
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-nav {
-  background: url("bgq.png") no-repeat;
-  background-size: 100% 100%;
-  font-family: 'Chewy', cursive;
-  font-size: 20px;
-  border-bottom: thin solid black;
-  padding-top: 0px;
-  margin: 0;
-  padding-bottom: 20px;
-  padding-top: 10px;
-  border: 0;
-  outline: 0;
-  vertical-align: baseline;
-}
-
-body {
-  font-family: 'Oswald', sans-serif;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  vertical-align: baseline;
-  background: url("bg2.png");
-  background-size: 2500px 3000px;
-
-}
-
-nav ul li, footer ul li, #nav ul li {
-    display: inline;
-    margin-right: 20px;
-    color: black;
-    font-size: 30px;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    vertical-align: baseline;
-}
-
-body {
-  font-family: 'Oswald', sans-serif;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  vertical-align: baseline;
-}
-
-nav ul li, footer ul li, #nav ul li {
-  display: inline;
-  margin-right: 20px;
-  color: black;
-  font-size: 30px;
-
-}
-
-nav ul, footer ul{
-  padding: 0px;
-  list-style: none;
-  font-weight: bold;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  vertical-align: baseline;
-}
-
-#container {
-  border-bottom: thin solid black;
-}
-
-#img {
-  width: 130px;
-  height: 120px;
-  margin-bottom: -35px;
-  margin-top: 12px;
-}
-
-#help {
-  float: right;
-}
-
-#help {
-  border-radius: 4px;
-  background-color: #f49373;
-  border: none;
-  color: black;
   text-align: center;
-  padding: 20px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  float: right;
-  margin-top: 22px;
 }
-
-#help span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-#help span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-#help:hover span {
-  padding-right: 25px;
-}
-
-#help:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
+/*Allows my html links to change color when mouse hovers over*/
 a:hover {
-  color: #f49373;
+  background-color: pink;
 }
-
-#about {
-  border: 5px solid black;
-  padding: 5px;
-  background-color: #76D7C4;
+/* This centers all my text on a page */
+.Centerer
+{
+  display: block;
+  margin: auto;
 }
-
-#body {
-  text-align: center;
-  font-size: 28px;
-  border-bottom: 5px dotted black;
-  border-top: 5px dotted black;
+#content {
+  position: relative;
 }
-
-.about {
-  border-bottom: 5px dotted black;
+table, th, thd {
+  border: 1 px solid black;
 }
-
-#pad {
-  padding-left: 100px;
+.menuDiv
+{
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz transform: translate(-50%, -50%);
+  -o-transform: translate (-50%, -50%);
+  padding: 2px 4px 2px 4px;
 }
-
-a:hover{
-  color: #f49373;
+.menuButtons {
+  display: inline-block;
+  border: 1px solid #333;
+  box-shadow: 2px 4px 2px #444;
+  padding: 2px 12px;
+  width: 125px;
 }
-
-#a:hover {
-   color: black;
+#MyImages {
+  margin: auto;
+}
+/* How to create different color when activates*/
+a: link, activated {
+  background-color: white;
+  color: red;
+      */
+       padding: 15px 25px;
+       text-align: center;
+       text-decoration: none;
+       display: inline-block;
+}
+a: hover, a: activate {
+/*
+  border: 1px solid #333;
+  box-shadow: 2px 4px 2px #444;
+  padding: 2px 12px; */
+}
+img{
+  padding:5px;
+  border:5px solid :black;
+  background-color:white;]
+}
+  
+  
+  
